# learning-bevy

./: Cargo.toml  LICENSE  README.md  notes.txt
alpha_beta/: Cargo.toml
alpha_beta/src/: lib.rs  test.rs
bevy_utils/: cargo.toml
bevy_utils/bevy_utils_derive/: cargo.toml
bevy_utils/bevy_utils_derive/src/: lib.rs
bevy_utils/src/: lib.rs  plugin.rs  types.rs
checkers/: Cargo.toml
checkers/src/: main.rs
checkers/src/game/: actions.rs  graphics.rs  logic.rs  mod.rs  plugin.rs  ui.rs
checkers/src/start_menu/: actions.rs  mod.rs  plugin.rs  ui.rs
connect_4/: Cargo.toml
connect_4/connect_4_model/: Cargo.toml
connect_4/connect_4_model/src/: line_tracker.rs  score_tracker.rs
connect_4/src/: main.rs
connect_4/src/core/: plugin.rs
connect_4/src/game/: actions.rs  ai.rs  event.rs  graphics.rs  input.rs  logic.rs  mod.rs  plugin.rs  ui.rs
connect_4/src/main_menu/: actions.rs  event.rs  input.rs  logic.rs  mod.rs  plugin.rs  ui.rs
connect_4/src/utils/: mod.rs  util_action.rs  util_command.rs  util_input.rs  util_state.rs
connect_4/src/utils/raycast/: components.rs  plugin.rs  raycast_2d.rs
connect_4_model/: Cargo.toml
connect_4_model/src/: lib.rs  score_tracker.rs  types.rs
k_utils/: Cargo.toml
k_utils/src/: lib.rs  mod.rs  util_action.rs  util_button.rs  util_component.rs  util_graphics.rs  util_plugin.rs  util_resource.rs  util_stages.rs  util_systems.rs
k_utils/src/raycast/: game_interaction.rs  mod.rs  mouse.rs
tic_tac_toe/: Cargo.toml
tic_tac_toe/assets/shaders/: brush.wgsl
tic_tac_toe/src/: main.rs
tic_tac_toe/src/game/: mod.rs  (+1 more)
(+18 files in other folders)
